[package]
name = "slh24-lab03"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive_more = "0.99.17"
inquire = "0.6.2"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
casbin = { version = "2.1.0", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = {version = "1.12.0", features = ["full"]}
argon2 = "0.5.2"
lazy_static = "1.4.0"
zxcvbn = "2.2.2"
log = "0.4.20"
env_logger = "0.10.1"
rand = "0.8.5"

