[package]
name = "slh24-lab03"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
inquire = "0.6.2"
once_cell = "1.19.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = { version = "0.25.0", features = ["derive"] }
casbin = { version = "2.1.0", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = {version = "1.35.1", features = ["full"]}
argon2 = "0.5.2"
zxcvbn = "2.2.2"
log = "0.4.20"
env_logger = "0.10.1"
rand = "0.8.5"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
futures = { version = "0.3.30", features = [] }

